# dioxus-showcase

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  publish.yml
crates/dioxus-showcase/: Cargo.toml  README.md
crates/dioxus-showcase-cli/: Cargo.toml  README.md
crates/dioxus-showcase-cli/src/: build.rs  check.rs  cli.rs  commands.rs  dev.rs  discovery.rs  main.rs  scaffold.rs  templates.rs
crates/dioxus-showcase-cli/src/templates/: generated_runtime.rs.hbs  showcase_app.css  showcase_cargo.toml.hbs  showcase_dioxus.toml.hbs  showcase_main.rs.hbs
crates/dioxus-showcase-cli/src/testdata/: build_golden_generated.rs  build_golden_manifest.json
crates/dioxus-showcase-core/: Cargo.toml  README.md
crates/dioxus-showcase-core/src/: config.rs  lib.rs  manifest.rs  runtime.rs
crates/dioxus-showcase-macros/: Cargo.toml  README.md
crates/dioxus-showcase-macros/src/: derive_story_props.rs  lib.rs  provider.rs  showcase.rs  story.rs  utils.rs
crates/dioxus-showcase-macros/tests/: macros.rs
crates/dioxus-showcase/src/: lib.rs
docs/: code-reference.md  improvement-ideas.md  worktree-tracks.md
docs/rfcs/: dioxus-showcase.md
example/: README.md
example/src/: button_variants.rs  lib.rs
examples/basic/: Cargo.toml  README.md
examples/basic/src/: button_variants.rs
scripts/: set-workspace-version.sh  verify-workspace-version.sh
