[workspace]
members = [
  "crates/dioxus-showcase-core",
  "crates/dioxus-showcase-macros",
  "crates/dioxus-showcase",
  "crates/dioxus-showcase-cli",
  "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Dodecahedr0x <dodecahedr0x@proton.me>"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
dioxus = { version = "0.7" }
dioxus-showcase-core = { version = "0.0.1", path = "crates/dioxus-showcase-core" }
dioxus-showcase-macros = { version = "0.0.1", path = "crates/dioxus-showcase-macros" }
dioxus-showcase = { version = "0.0.1", path = "crates/dioxus-showcase" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[workspace.lints.clippy]
all = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
