[workspace]
members = [
  "crates/dioxus-showcase-core",
  "crates/dioxus-showcase-macros",
  "crates/dioxus-showcase",
  "crates/dioxus-showcase-cli",
  "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.0.5"
edition = "2021"
license = "MIT"
authors = ["Dodecahedr0x <dodecahedr0x@proton.me>"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
dioxus = { version = "0.7" }
dioxus-showcase-core = { version = "0.0.5", path = "crates/dioxus-showcase-core" }
dioxus-showcase-macros = { version = "0.0.5", path = "crates/dioxus-showcase-macros" }
dioxus-showcase = { version = "0.0.5", path = "crates/dioxus-showcase" }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2.0"
toml = "0.8"

[workspace.lints.clippy]
all = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
