[package]
name = "dioxus-showcase-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for developing and validating dioxus-showcase projects."

[[bin]]
name = "dioxus-showcase"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dioxus-showcase-core.workspace = true
handlebars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["full", "parsing"] }

[lints]
workspace = true
