[package]
name = "dioxus-showcase-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core data model and shared types for dioxus-showcase."

[lib]
name = "dioxus_showcase_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
